metadata/objects/Grax_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Field_Name__c</fullName>
        <inlineHelpText>Salesforce Field to query</inlineHelpText>
        <label>API Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <inlineHelpText>Label to be displayed on the Graph Panel table</inlineHelpText>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>Object Name (i.e Opportunity)</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Indicates the order of the fields to display</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grax Field Mapping</label>
</CustomObject>